# warfork-qfusion

./: .appveyor.yml  .gitmodules  .travis.yml  LICENSE.txt  README.md  changelog.txt  warfork_assets_cc0.txt
icons/: warfork.icns  warfork256x256.xpm
source/: CMakeLists.txt
source/android/: android_lib.c  android_sys.c
source/angelwrap/: Android.mk  CMakeLists.txt  qas_local.h  qas_main.cpp  qas_public.h  qas_syscalls.cpp  qas_syscalls.h
source/cgame/: Android.mk  CMakeLists.txt  cg_chat.cpp  cg_cmds.cpp  cg_damage_indicator.cpp  cg_draw.cpp  cg_effects.cpp  cg_ents.cpp  cg_events.cpp  cg_hud.cpp  cg_lents.cpp  cg_local.h  cg_main.cpp  cg_media.cpp  cg_players.cpp  cg_pmodels.cpp  cg_predict.cpp  cg_public.h  cg_scoreboard.cpp  cg_screen.cpp  cg_syscalls.cpp  cg_syscalls.h  cg_teams.cpp  cg_view.cpp  cg_vweap.cpp
source/cin/: Android.mk  CMakeLists.txt  cin.c  cin_local.h  cin_main.c  cin_public.h  cin_roq.c  cin_syscalls.c  cin_syscalls.h  cin_theora.c
source/client/: CMakeLists.txt  cin.c  cl_game.c  cl_input.c  cl_main.c  cl_mm.c  cl_parse.c  cl_screen.c  cl_serverlist.c  cl_sound.c  cl_ui.c  cl_vid.c  console.c  ftlib.c  snd_public.h  xpm.c
source/client/libmumblelink/: libmumblelink.c
source/egl/: egl_glw.c
source/ftlib/: Android.mk  CMakeLists.txt  ftlib.c  ftlib_local.h  ftlib_main.c  ftlib_public.h  ftlib_syscalls.c  ftlib_syscalls.h
source/game/: Android.mk  CMakeLists.txt  g_as_local.h  g_ascript.cpp  g_awards.cpp  g_callvotes.cpp  g_chase.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_frame.cpp  g_gameteams.cpp  g_gametypes.cpp  g_items.cpp  g_local.h  g_main.cpp  g_mm.cpp  g_public.h  g_spawn.cpp  g_spawnpoints.cpp  g_syscalls.cpp  g_syscalls.h  g_target.cpp  g_trigger.cpp  g_utils.cpp  g_weapon.cpp  p_client.cpp  p_hud.cpp  p_view.cpp  p_weapon.cpp
source/game/ai/: ai_class_dmbot.cpp  ai_main.cpp  ai_navigation.cpp  ai_nodes.cpp  ai_tools.cpp  bot_spawn.cpp
source/gameshared/: gs_gameteams.c  gs_items.c  gs_misc.c  gs_players.c  gs_pmove.c  gs_public.h  gs_qrespath.h  gs_ref.h  gs_weapondefs.c  gs_weapons.c  q_angeliface.h  q_arch.h  q_comref.h  q_math.h  q_shared.h
source/irc/: Android.mk  CMakeLists.txt  irc_client.c  irc_common.c  irc_interface.c  irc_interface.h  irc_net.c
source/mac/: Warfork-Info.plist
source/qalgo/: rng.cpp  rng.h
source/qcommon/: ascript.c  cjson.c  cm_main.c  cm_q3bsp.c  cmd.c  common.c  compression.h  cvar.c  files.c  irc.c  library.c  net.c  net_chan.c  patch.c  patch.h  qcommon.h  qfiles.h  steam.c  steam.h  sys_fs.h  sys_library.h  sys_vfs_zip.h  threads.c  version.warfork.h  wswcurl.c
source/ref_gl/: Android.mk  CMakeLists.txt  qgl.h  r_backend_program.c  r_cmds.c  r_frontend.c  r_glimp.h  r_image.c  r_image.h  r_imagelib.c  r_imagelib.h  r_jobs.c  r_jobs.h  r_light.c  r_local.h  r_main.c  r_model.c  r_model.h  r_program.c  r_public.c  r_public.h  r_q1q2bsp.c  r_register.c  r_shader.c  r_shader.h  r_vbo.c
source/sdl/: sdl_clipboard.c  sdl_glw.c  sdl_input.c  sdl_input_unix.c  sdl_lib.c  sdl_qgl.c  sdl_sys.c  sdl_threads.c
source/server/: CMakeLists.txt  sv_game.c  sv_init.c  sv_main.c  sv_mm.c  sv_oob.c  sv_web.c
source/snd_openal/: Android.mk  CMakeLists.txt  qal.c  qal.h  snd_al.c  snd_decoder.c  snd_decoder.h  snd_decoder_ogg.c  snd_local.h  snd_main.c  snd_syscalls.c  snd_syscalls.h
source/snd_qf/: CMakeLists.txt  snd_dma.c  snd_local.h  snd_mem.c  snd_mix.c  snd_music.c  snd_ogg.c
source/steamlib/: CMakeLists.txt  steamlib_local.h  steamlib_main.cpp  steamlib_public.h  steamlib_syscalls.cpp
source/tv_server/: CMakeLists.txt  tv_relay_module.c
source/tv_server/tv_module/: tvm_main.c  tvm_main.h  tvm_pmove.c  tvm_public.h  tvm_syscalls.c  tvm_syscalls.h
source/ui/: Android.mk  CMakeLists.txt  ui_public.cpp  ui_public.h
source/ui/as/: as_bind_console.cpp  as_bind_dom.cpp  as_bind_game.cpp  as_bind_main.cpp  as_bind_options.cpp  as_bind_window.cpp  asui.h  asui_local.h  asui_scriptdocument.cpp  asui_scriptevent.cpp
source/ui/datasources/: ui_serverbrowser_datasource.cpp  ui_serverbrowser_datasource.h  ui_video_datasource.cpp
source/ui/kernel/: ui_documentloader.cpp  ui_documentloader.h  ui_fontproviderinterface.cpp  ui_fontproviderinterface.h  ui_navigationstack.cpp  ui_renderinterface.cpp  ui_rocketmodule.cpp  ui_rocketmodule.h  ui_systeminterface.cpp  ui_systeminterface.h
source/ui/widgets/: ui_anchor.cpp  ui_colorselector.cpp  ui_dataspinner.cpp  ui_iframe.cpp  ui_keyselect.h  ui_optionsform.cpp  ui_selectable_datagrid.cpp
source/unix/: unix_fs.c  unix_lib.c  unix_net.c  unix_sys.c  unix_time.c
source/win32/: win_fs.c  win_glw.c  win_input.c  win_lib.c  win_sys.c  win_threads.c
source/win32/include/: al.h  alc.h
steam/: 671610_loc_brazilian.vdf
steam-l10n/achievements/: 671610_loc_english.vdf  steam-achievements-vdf_de.vdf  steam-achievements-vdf_en.vdf  steam-achievements-vdf_es_419.vdf  steam-achievements-vdf_fi.vdf  steam-achievements-vdf_it.vdf  steam-achievements-vdf_nl.vdf  steam-achievements-vdf_pl.vdf  steam-achievements-vdf_pt_BR.vdf  steam-achievements-vdf_ru.vdf  steam-achievements-vdf_vi.vdf  steam-achievements-vdf_zh.vdf  steam-achievements-vdf_zh_CN.vdf  steam-achivements-vdf_ru.vdf  steam-achivements-vdf_zh.vdf
steam-l10n/short description/: steam-short-description_de.txt  steam-short-description_en.txt  steam-short-description_es.txt  steam-short-description_es_419.txt  steam-short-description_fi.txt  steam-short-description_fr.txt  steam-short-description_it.txt  steam-short-description_ja.txt  steam-short-description_nl.txt  steam-short-description_pt_BR.txt  steam-short-description_ru.txt  steam-short-description_vi.txt  steam-short-description_zh.txt
steam-l10n/summary/: steam-summary_de.txt  steam-summary_en.txt  steam-summary_fi.txt  steam-summary_it.txt  steam-summary_pt_BR.txt  steam-summary_vi.txt  steam-summary_zh_CN.txt
steam-l10n/summury/: steam-summary_ru.txt
tools/cross_compile/: compile_source.sh
tools/warmama-4.0/src/: warmama.py
tools/warmama-4.0/src/database/: __init__.py  models.py  util_awardsfix.py
(+4 files in other folders)
